# django-pytest-practice

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
pytest_example/: asgi.py  settings.py
scripts/: entrypoint.sh  fake_data.py  fake_data_kr.py  hstore-up.sh  pg-extensions-up.sh
shops/: views.py
shops/migrations/: 0001_initial.py
src/pytest_example/: settings.py  settings_test.py  urls.py  wsgi.py
src/shops/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
src/shops/migrations/: 0002_order_is_active_order_read_only_created_at_and_more.py  0003_remove_orderitem_update_total_price_on_item_change_and_more.py  0004_product_attributes.py
src/tests/: conftest.py  test_shops_filters.py  test_shops_services.py  test_shops_views.py
